updating to latest values

--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -56,8 +56,8 @@ Recall that, in the Helium blockchain, blocks contain some number of individual 
 epochs are comprised of all the blocks mined by the current Consensus Group since the last epoch.
 
 So, if the Network achieves its target block time of `60` seconds, and target epoch of `30` blocks,
-the blockchain will produce `2,500,000` HNT per month. Per epoch, this equals roughly
-`1712.704154343` HNT. The math for this is as follows:
+the blockchain will produce `2,500,000` HNT per month. Per epoch, this equals roughly `1736.1111`
+HNT. The math for this is as follows:
 
 - `(43200 minutes per month / 30 minutes per epoch) = 1440 epochs per month`
 - `(2500000 tokens minted per month / 1440 epochs per month) = 1736.1111 HNT per epoch`
@@ -69,22 +69,22 @@ recent block and epoch statistics, past $HNT production numbers, and much more.
 
 ## HNT Distributions Per Epoch
 
-As calculated above, the target `HNT` per epoch is approximately `1736.1111`. The next logical
+As calculated above, the target HNT per epoch is approximately `1736.1111`. The next logical
 question is, "Where does all this HNT go?" Let's take a look.
 
-Below are the mining rewards per epoch as of August 1, 2021. For every complete epoch, marked by the
-election of a new Consensus Group, all the `HNT` produced are distributed over the following reward
+Below are the mining rewards per epoch as of August 1, 2022. For every complete epoch, marked by the
+election of a new Consensus Group, all the HNT produced are distributed over the following reward
 types:
 
-| Reward Type           | Percentage      | HNT Earned by Reward Type |
-| :-------------------- | :-------------- | :------------------------ |
-| PoC Challenger        | 0.90% - 2.11%   | 15.6250 - 36.6319         |
-| PoC Challengees       | 5.02% - 11.78%  | 87.1527 - 204.5139        |
-| Witnesses             | 20.08% - 47.11% | 348.6111 - 817.8819       |
-| Consensus Group       | 6%              | 104.1666                  |
-| Security Tokens       | 33%             | 572.9166                  |
-| Network Data Transfer | _Up to 35%_     | _Up to 607.6389_          |
-| **Total**             | **100%**        | **1736.1111**             |
+| Reward Type           |     Percentage | HNT Earned by Reward Type |
+| :-------------------- | -------------: | ------------------------: |
+| PoC Challenger        |          0.85% |                   14.7569 |
+| PoC Challengees       |          4.73% |                   82.1181 |
+| Witnesses             |         18.92% |                  328.4722 |
+| Consensus Group       |          6.00% |                  104.1667 |
+| Security Tokens       |         32.00% |                  555.5556 |
+| Network Data Transfer | _Up to 37.50%_ |          _Up to 651.0417_ |
+| **Total**             |       **100%** |             **1736.1111** |
 
 **Rewards Change Over Time**
 
