--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -11,7 +11,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # Mining and Token Rewards
 
-While there's no exact formula for calculating how much `HNT` you'll earn over a given period, there
+While there's no exact formula for calculating how much HNT you'll earn over a given period, there
 are some higher level concepts, design elements, and rules to keep in mind that will help better
 explain what you might earn and why. This section covers these, as well as some mining and token
 reward basics.
@@ -19,7 +19,7 @@ reward basics.
 ## How Do Hotspots Earn Helium Tokens?
 
 The Helium blockchain rewards Hotspots for providing wireless coverage and verifying the Helium
-Network. Hotspots are rewarded in Helium Token, $HNT.
+Network. Hotspots are rewarded in Helium Token, HNT.
 
 Every epoch, the current consensus group mines approximately 30 blocks on the blockchain. In each
 block, Hotspots perform various types of work and are awarded according to the following
@@ -42,9 +42,9 @@ No. Once your Hotspot is completely deployed and fully synced with the Helium bl
 owner are not required to do anything else in order to earn $HNT. Your Hotspot will perform all of
 the above activities on its own while it runs.
 
-## Target $HNT Production Per Epoch
+## Target HNT Production Per Epoch
 
-As of August 1, 2021 (the most-recent halving), the target production rate for new $HNT minted per
+As of August 1, 2021 (the most-recent halving), the target production rate for new HNT minted per
 month is `2,500,000`. This means that, if the blockchain performs as designed, it will produce
 `2,500,000` HNT per month. This target rate is based on the following two parameters, as defined in
 their specific chain variables:
@@ -65,7 +65,7 @@ HNT. The math for this is as follows:
 ### What Are The Current Block and Epoch Times?
 
 At any point you can go to the [Helium blockchain Explorer](http://explorer.helium.com/) to view
-recent block and epoch statistics, past $HNT production numbers, and much more.
+recent block and epoch statistics, past HNT production numbers, and much more.
 
 ## HNT Distributions Per Epoch
 
@@ -91,22 +91,23 @@ types:
 In the above table you can see the maximum allotted rewards per reward type in accordance with HIP
 10 (described below). If you want to see the current reward type percentage, you can always query
 the [Chain Variables API](/api/blockchain/chain-variables). The next maximum allotted rewards change
-is currently scheduled for **August 1, 2022.**
+is currently scheduled for **August 1, 2023.**
 
 ## HIP10 and Variable HNT Rewards for Network Data Transfer
 
 As noted above,
 [HIP10 was activated on August 24th, 2020](https://github.com/helium/HIP/blob/master/0010-usage-based-data-transfer-rewards.md).
 HIP10 was introduced by Helium Community Member `hashc0de` and was adopted by the Helium Community.
-It ensures that $HNT is rewarded at a rate of 1:1 to the amount of Data Credits (DCs) routed by any
+
+It ensures that HNT is rewarded at a rate of 1:1 to the amount of Data Credits (DCs) routed by any
 given Hotspot per epoch. In doing so, the Network Data Transfer reward is proportional to the DC
 spent that epoch. This proportional relationship between Network Data Transfer reward type and DC is
-capped at 35% (607.6389 HNT). Therefore, if the DC burned doesn't equal the value of `607.6389` HNT,
-the remaining HNT is redistributed to the Proof of Coverage (PoC) rewards groups pro-rata.
+capped at 37.50% (651.0417 HNT). Therefore, if the DC burned doesn't equal the value of `651.0417`
+HNT, the remaining HNT is redistributed to the Proof of Coverage (PoC) rewards groups pro-rata.
 
 Here are a few examples to illustrate how this works in practice:
 
-**Example 1: DC Burn does not exceed 35% HNT**
+**Example 1: DC Burn does not exceed 37.50% HNT**
 
 - In a given epoch, `2,000,000` DCs are transferred across the network
 - The HNT Oracle Price is `$2.00`
