remove sync language

--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -38,8 +38,8 @@ distribution:
 
 **_Do I Have To Actively Participate to Earn Rewards Once My Hotspot is Deployed?_**
 
-No. Once your Hotspot is completely deployed and fully synced with the Helium blockchain, you as the
-owner are not required to do anything else in order to earn $HNT. Your Hotspot will perform all of
+No. Once your Hotspot is completely deployed and onboarded to the Helium blockchain, you as the
+owner are not required to do anything else in order to earn HNT. Your Hotspot will perform all of
 the above activities on its own while it runs.
 
 ## Target HNT Production Per Epoch
