remove Challenger language from Hotspots reward activities

--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -133,16 +133,13 @@ is:`(800,000,000 DC * $0.00001 / $8.00 HNT Oracle Price)`
 **Additional Notes on Reward Types and Payouts**
 
 - All Validators in the `Consensus` group will earn an equal reward.
-- All Hotspots participating in PoC, including `Challengers`, `Challengees` and `Witnesses` will
-  earn rewards proportional to how many events they participated in out of the total number of
-  events per epoch.
+- All Hotspots participating in PoC, including `Challengees` and `Witnesses` will earn rewards
+  proportional to how many events they participated in out of the total number of events per epoch.
 - All Hotspots participating in `Network Data Transfer` will earn rewards proportional to their
   share of the total data transfer in that epoch, as shown above.
 - Hotspots can earn one or more reward types during any given epoch.
-- Hotspots are only eligible to submit one Proof of Coverage Challenge - which results in them
-  earning the `PoC Challenger` reward - **up to once per 360 blocks**.
-- `PoC Challenger`, `PoC Challengee`, and `Witness` reward types get distributed in the epoch that
-  includes the corresponding PoC receipt.
+- `PoC Challengee` and `Witness` reward types get distributed in the epoch that includes the
+  corresponding PoC receipt.
 - A Hotspots can earn more than one `PoC Challengee` and `Witness` rewards per epoch.
 
 ## HNT Proration and Slow Block Times
