--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -118,6 +118,11 @@ Here are a few examples to illustrate how this works in practice:
   - `22.2402` to the Challenger group => (0.85/(0.85+4.73+18.92) = 3%)
   - `123.7603` to the Challengee group => (4.73/(0.85+4.73+18.92) = 19%)
   - `495.0412` to the Witness group => (18.92/(0.85+4.73+18.92) = 77%)
+- The remaining `641.0417` from the Network Data Transfer reward would be distributed by weight
+  among the Challengers, Witnesses, and Challengees.
+  - `22.2402` to the Challenger group => `0.85/(0.85+4.73+18.92) = 3%`
+  - `123.7603` to the Challengee group => `4.73/(0.85+4.73+18.92) = 19%`
+  - `495.0412` to the Witness group => `18.92/(0.85+4.73+18.92) = 77%`
 
 **Example 2: DC Burn exceeds 37.50% HNT**
 
