--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -25,14 +25,13 @@ Every epoch, the current consensus group mines approximately 30 blocks on the bl
 block, Hotspots perform various types of work and are awarded according to the following
 distribution:
 
-| Reward Type           | Chain Variable          | Description                                                                                                         |
-| :-------------------- | :---------------------- | :------------------------------------------------------------------------------------------------------------------ |
-| PoC Challenger        | poc_challengers_percent | Rewarded to any Hotspot that creates a valid PoC challenge and submits the corresponding receipt to the blockchain. |
-| PoC Challengees       | poc_challengees_percent | Awarded to any Hotspot that transmits a PoC packet after being targeted by the challenger.                          |
-| Witnesses             | poc_witnesses_percent   | Distributed to all Hotspots that witness a beacon packet as part of a PoC Challenge.                                |
-| Consensus Group       | consensus_percent       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks.  |
-| Security              | securities_percent      | Awarded to Helium, Inc and other Network investors who hold Security Tokens.                                        |
-| Network Data Transfer | dc_percent              | Distributed each epoch to Hotspots that route LongFi sensor data for sensors on the Network during that epoch.      |
+| Reward Type           | Chain Variable          | Description                                                                                                        |
+| :-------------------- | :---------------------- | :----------------------------------------------------------------------------------------------------------------- |
+| PoC Challengees       | poc_challengees_percent | Awarded to any Hotspot that transmits a PoC packet after being targeted by the challenger.                         |
+| Witnesses             | poc_witnesses_percent   | Distributed to all Hotspots that witness a beacon packet as part of a PoC Challenge.                               |
+| Consensus Group       | consensus_percent       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks. |
+| Security              | securities_percent      | Awarded to Helium, Inc and other Network investors who hold Security Tokens.                                       |
+| Network Data Transfer | dc_percent              | Distributed each epoch to Hotspots that route LongFi sensor data for sensors on the Network during that epoch.     |
 
 **_Do I Have To Actively Participate to Earn Rewards Once My Hotspot is Deployed?_**
 
@@ -139,8 +138,8 @@ calculation is:`(800,000,000 DC * $0.00001 / $8.00 HNT Oracle Price)`
 - All Hotspots participating in `Network Data Transfer` will earn rewards proportional to their
   share of the total data transfer in that epoch, as shown above.
 - Hotspots can earn one or more reward types during any given epoch.
-- `PoC Challengee` and `Witness` reward types get distributed in the epoch that includes the
-  corresponding PoC receipt.
+- `PoC Challenger`, `PoC Challengee`, and `Witness` reward types get distributed in the epoch that
+  includes the corresponding PoC receipt.
 - A Hotspots can earn more than one `PoC Challengee` and `Witness` rewards per epoch.
 
 ## HNT Proration and Slow Block Times
