--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -73,15 +73,15 @@ Below are the mining rewards per epoch as of August 1, 2022. For every complete 
 election of a new Consensus Group, all the HNT produced are distributed over the following reward
 types:
 
-| Reward Type           |     Percentage | HNT Earned by Reward Type |
-| :-------------------- | -------------: | ------------------------: |
-| PoC Challenger        |          0.85% |                   14.7569 |
-| PoC Challengees       |          4.73% |                   82.1181 |
-| Witnesses             |         18.92% |                  328.4722 |
-| Consensus Group       |          6.00% |                  104.1667 |
-| Security Tokens       |         32.00% |                  555.5556 |
-| Network Data Transfer | _Up to 37.50%_ |          _Up to 651.0417_ |
-| **Total**             |       **100%** |             **1736.1111** |
+| Reward Type           | Percentage      | HNT Earned by Reward Type |
+| :-------------------- | :-------------- | :------------------------ |
+| PoC Challenger        | 0.85%           | 14.7569                   |
+| PoC Challengees       | 4.73% - 12.23%  | 82.1181 - 212.3264        |
+| Witnesses             | 18.92% - 48.92% | 328.4722 - 849.3056       |
+| Consensus Group       | 6%              | 104.1667                  |
+| Security Tokens       | 32%             | 555.5556                  |
+| Network Data Transfer | _Up to 37.50%_  | _Up to 651.0417_          |
+| **Total**             | **100%**        | **1736.1111**             |
 
 **Rewards Change Over Time**
 
