explorer refresh expectation update

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -64,7 +64,7 @@ Radio dashboard appears under the "Radio Dashboard" tab on the local IP address 
 - If you are using a Bobber 500 gateway, you can access the miner and radio dashboard via this URL:
   [http://bobber-gateway.local/](http://bobber-gateway.local/)
 
-5G Hotspot will appear on [explorer.helium.com](https://explorer.helium.com/) within 2-4 days,
+5G Hotspot will appear on [explorer.helium.com](https://explorer.helium.com/) within 5 days,
 depending on how quickly it is registered in the SAS.
 
 ## Install the Helium Wallet App to Manage HNT/MOBILE Token
