removed challenger share from example

--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -114,10 +114,9 @@ Here are a few examples to illustrate how this works in practice:
 - These `10 HNT` would be split proportionally to the Hotspots that did the work routing packets at
   the 1:1 rate.
 - The remaining `641.0417` from the Network Data Transfer reward would be distributed by weight
-  among the Challengers, Witnesses, and Challengees.
-  - `22.2402` to the Challenger group => `0.85/(0.85+4.73+18.92) = 3%`
-  - `123.7603` to the Challengee group => `4.73/(0.85+4.73+18.92) = 19%`
-  - `495.0412` to the Witness group => `18.92/(0.85+4.73+18.92) = 77%`
+  among the Witnesses and Challengees.
+  - `128.2083` to the Challengee group => `4.73/(4.73+18.92) = 20%`
+  - `512.8333` to the Witness group => `18.92/(4.73+18.92) = 80%`
 
 **Example 2: DC Burn exceeds 37.50% HNT**
 
