Update: change the names of products

--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-air-th.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-air-th.mdx
@@ -1,19 +1,19 @@
 ---
 id: sensecap-air-th
 hide_title: true
-title: SenseCAP Wireless Air Temperature and Humidity Sensor - LoRaWAN
+title: SenseCAP Wireless Air Temperature and Humidity Sensor - LoRaWAN®
 description:
   It measures temperature and humidity in the atmosphere. It's designed with a 2-in-1 sensor, a
   custom battery, and an industry-grade enclosure, optimized for outdoor use cases that need
   reliable data collection for years.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-air-th-deployment.jpg
-sidebar_label: SenseCAP Wireless Air Temperature and Humidity Sensor - LoRaWAN
+sidebar_label: SenseCAP Wireless Air Temperature and Humidity Sensor - LoRaWAN®
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-air-th
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## SenseCAP Wireless Air Temperature and Humidity Sensor - LoRaWAN
+## SenseCAP Wireless Air Temperature and Humidity Sensor - LoRaWAN®
 
 It measures temperature and humidity in the atmosphere. It's designed with a 2-in-1 sensor, a custom
 battery, and an industry-grade enclosure, optimized for outdoor use cases that need reliable data
