--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-light.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-light.mdx
@@ -1,19 +1,19 @@
 ---
 id: sensecap-light
 hide_title: true
-title: SenseCAP Wireless Light Intensity Sensor - LoRaWAN
+title: SenseCAP Wireless Light Intensity Sensor - LoRaWAN®
 description:
   It measures the intensity of light in lux from 0 - 188000 lux. It is designed with battery-powered
   and IP66 enclosure for outdoor use, optimized for use cases that need reliable data collection
   over years.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-light-deployment.jpg
-sidebar_label: SenseCAP Wireless Light Intensity Sensor - LoRaWAN
+sidebar_label: SenseCAP Wireless Light Intensity Sensor - LoRaWAN®
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-light
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## SenseCAP Wireless Light Intensity Sensor - LoRaWAN
+## SenseCAP Wireless Light Intensity Sensor - LoRaWAN®
 
 It measures the intensity of light in lux from 0 - 188000 lux. It is designed with battery-powered
 and IP66 enclosure for outdoor use, optimized for use cases that need reliable data collection over
