--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-pressure.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-pressure.mdx
@@ -1,19 +1,19 @@
 ---
 id: sensecap-pressure
 hide_title: true
-title: SenseCAP Wireless Barometric Pressure Sensor - LoRaWAN
+title: SenseCAP Wireless Barometric Pressure Sensor - LoRaWAN®
 description:
   It measures atmospheric pressure, featuring high-precision, stability, and high EMC robustness.
   It’s designed with an air pressure sensor, a custom battery, and an industry-grade enclosure,
   optimized for outdoor use cases that need reliable data collection over years.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-pressure-deployment.jpg
-sidebar_label: SenseCAP Wireless Barometric Pressure Sensor - LoRaWAN
+sidebar_label: SenseCAP Wireless Barometric Pressure Sensor - LoRaWAN®
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-pressure
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## SenseCAP Wireless Barometric Pressure Sensor - LoRaWAN
+## SenseCAP Wireless Barometric Pressure Sensor - LoRaWAN®
 
 It measures atmospheric pressure, featuring high-precision, stability, and high EMC robustness. It’s
 designed with an air pressure sensor, a custom battery, and an industry-grade enclosure, optimized
