--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2100-data-logger.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2100-data-logger.mdx
@@ -1,21 +1,21 @@
 ---
 id: sensecap-s2100-data-logger
 hide_title: true
-title: SenseCAP S2100 LoRaWAN Data Logger
+title: SenseCAP S2100 LoRaWAN® Data Logger
 description:
-  SenseCAP S2100 LoRaWAN Data Logger is an easy-to-deploy, industrial-grade sensor hub that can
+  SenseCAP S2100 LoRaWAN® Data Logger is an easy-to-deploy, industrial-grade sensor hub that can
   support 100+ industrial sensors and 100+ grove sensors including various sensor types such as
   Analog/I2C/UART/RS485.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2100.jpeg
-sidebar_label: SenseCAP S2100 LoRaWAN Data Logger
+sidebar_label: SenseCAP S2100 LoRaWAN® Data Logger
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2100-data-logger
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## SenseCAP S2100 LoRaWAN Data Logger
+## SenseCAP S2100 LoRaWAN® Data Logger
 
-SenseCAP S2100 LoRaWAN Data Logger is an easy-to-deploy, industrial-grade sensor hub that can
+SenseCAP S2100 LoRaWAN® Data Logger is an easy-to-deploy, industrial-grade sensor hub that can
 support 100+ industrial sensors and 100+ grove sensors including various sensor types such as
 Analog/I2C/UART/RS485.
 
@@ -31,7 +31,7 @@ Analog/I2C/UART/RS485.
 
 ### Specifications
 
-[S2100 LoRaWAN Data Logger](https://drive.google.com/file/d/1HfZMCDgKOhgWbJDyBI8cY4T2JVEOh9fF/view)
+[S2100 LoRaWAN® Data Logger](https://drive.google.com/file/d/1HfZMCDgKOhgWbJDyBI8cY4T2JVEOh9fF/view)
 
 #### Sensors:
 
