--- a/docs/use-the-network/devices/development/seeed-studio/wiomodule-e5.mdx
+++ b/docs/use-the-network/devices/development/seeed-studio/wiomodule-e5.mdx
@@ -1,23 +1,23 @@
 ---
-id: loramodule-e5
+id: wiomodule-e5
 hide_title: true
-title: LoRa-E5 STM32WLE5JC Module
+title: Wio-E5 Wireless Module, for Long Range Application
 description:
-  LoRa-E5 LoRaWAN module is designed with ST system-level package chip STM32WLE5JC, ARM Cortex M4
-  ultra-low-power MCU and LoRa SX126X. It supports (G)FSK mode and LoRa. 62.5kHz, 125kHz, 250kHz,
+  Wio-E5 LoRaWAN® module is designed with ST system-level package chip STM32WLE5JC, ARM Cortex M4
+  ultra-low-power MCU and LoRa® SX126X. It supports (G)FSK mode and LoRa®. 62.5kHz, 125kHz, 250kHz,
   and 500kHz bandwidth can be used in LoRa® mode, making it suitable for the design of various IoT
   nodes, supporting EU868 and US915.
 image: img/use-the-network/devices/development/seeed-studio/loramodule-e5.jpg
-sidebar_label: LoRa-E5 STM32WLE5JC Module
-slug: /use-the-network/devices/development/seeed-studio/loramodule-e5
+sidebar_label: Wio-E5 STM32WLE5JC Module
+slug: /use-the-network/devices/development/seeed-studio/wiomodule-e5
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## LoRa-E5 STM32WLE5JC Module
+## Wio-E5 STM32WLE5JC Module
 
-LoRa-E5 LoRaWAN module is designed with ST system-level package chip STM32WLE5JC, ARM Cortex M4
-ultra-low-power MCU and LoRa SX126X. It supports (G)FSK mode and LoRa. 62.5kHz, 125kHz, 250kHz, and
+Wio-E5 LoRaWAN® module is designed with ST system-level package chip STM32WLE5JC, ARM Cortex M4
+ultra-low-power MCU and LoRa® SX126X. It supports (G)FSK mode and LoRa®. 62.5kHz, 125kHz, 250kHz, and
 500kHz bandwidth can be used in LoRa® mode, making it suitable for the design of various IoT nodes,
 supporting EU868 and US915.
 
