--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2103-co2-tem-humid.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2103-co2-tem-humid.mdx
@@ -1,27 +1,27 @@
 ---
 id: sensecap-s2103-co2-tem-humid
 hide_title: true
-title: SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensor
+title: SenseCAP S2103- LoRaWAN® CO2, Temperature, and Humidity Sensor
 description:
-  SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensors satisfy industrial long-distance
+  SenseCAP S2103- LoRaWAN® CO2, Temperature, and Humidity Sensors satisfy industrial long-distance
   data acquisition with a wide range of 400 to 10000 ppm, -40°C to 85°C and 0 to 100% RH
   respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in
   replaceable battery for minimal maintenance, it also supports three different LoRaWAN network
   architectures enabling you to easily join it in existing gateways and network servers to build
   flexible and high-performance sensor network.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2103.jpeg
-sidebar_label: SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensor
+sidebar_label: SenseCAP S2103- LoRaWAN® CO2, Temperature, and Humidity Sensor
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2103-co2-tem-humid
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensor
+## SenseCAP S2103- LoRaWAN® CO2, Temperature, and Humidity Sensor
 
-SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensors satisfy industrial long-distance data
+SenseCAP S2103- LoRaWAN® CO2, Temperature, and Humidity Sensors satisfy industrial long-distance data
 acquisition with a wide range of 400 to 10000 ppm, -40°C to 85°C and 0 to 100% RH respectively. With
 Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for
-minimal maintenance, it also supports three different LoRaWAN network architectures enabling you to
+minimal maintenance, it also supports three different LoRaWAN® network architectures enabling you to
 easily join it in existing gateways and network servers to build flexible and high-performance
 sensor network.
 
@@ -37,7 +37,7 @@ sensor network.
 
 ### Specifications
 
-[S2103- LoRaWAN CO2, Temperature, and Humidity Sensor Specs](https://drive.google.com/file/d/1HfZMCDgKOhgWbJDyBI8cY4T2JVEOh9fF/view)
+[S2103- LoRaWAN® CO2, Temperature, and Humidity Sensor Specs](https://drive.google.com/file/d/1HfZMCDgKOhgWbJDyBI8cY4T2JVEOh9fF/view)
 
 #### Sensors:
 
