--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2104-soil-mois-tem.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2104-soil-mois-tem.mdx
@@ -1,27 +1,27 @@
 ---
 id: sensecap-s2104-soil-mois-tem
 hide_title: true
-title: SenseCAP S2104 - LoRaWAN Soil Moisture and Temperature Sensor
+title: SenseCAP S2104 - LoRaWAN® Soil Moisture and Temperature Sensor
 description:
-  SenseCAP S2104 - LoRaWAN Soil Temperature and Moisture sensors satisfy industrial long-distance
+  SenseCAP S2104 - LoRaWAN® Soil Temperature and Moisture sensors satisfy industrial long-distance
   data acquisition with a wide range of 0 ~ 100% (m³/m³) and -40 ~ 80℃ respectively. With Bluetooth
   5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for minimal
-  maintenance, it also supports three different LoRaWAN network architectures enabling you to easily
+  maintenance, it also supports three different LoRaWAN® network architectures enabling you to easily
   join it in existing gateways and network servers to build flexible and high-performance sensor
   network.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2104.jpeg
-sidebar_label: SenseCAP S2104 - LoRaWAN Soil Moisture and Temperature Sensor
+sidebar_label: SenseCAP S2104 - LoRaWAN® Soil Moisture and Temperature Sensor
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2104-soil-mois-tem
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## SenseCAP S2104 - LoRaWAN Soil Moisture and Temperature Sensor
+## SenseCAP S2104 - LoRaWAN® Soil Moisture and Temperature Sensor
 
-SenseCAP S2104 - LoRaWAN Soil Temperature and Moisture sensors satisfy industrial long-distance data
+SenseCAP S2104 - LoRaWAN® Soil Temperature and Moisture sensors satisfy industrial long-distance data
 acquisition with a wide range of 0 ~ 100% (m³/m³) and -40 ~ 80℃ respectively. With Bluetooth 5.0 for
 easy configuration and firmware upgrade and a built-in replaceable battery for minimal maintenance,
-it also supports three different LoRaWAN network architectures enabling you to easily join it in
+it also supports three different LoRaWAN® network architectures enabling you to easily join it in
 existing gateways and network servers to build flexible and high-performance sensor network.
 
 <img
@@ -36,7 +36,7 @@ existing gateways and network servers to build flexible and high-performance sen
 
 ### Specifications
 
-[S2104 - LoRaWAN Soil Moisture and Temperature Sensor](https://drive.google.com/file/d/1HfZMCDgKOhgWbJDyBI8cY4T2JVEOh9fF/view)
+[S2104 - LoRaWAN® Soil Moisture and Temperature Sensor](https://drive.google.com/file/d/1HfZMCDgKOhgWbJDyBI8cY4T2JVEOh9fF/view)
 
 #### Sensors:
 
