--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2105-soil-mois-tem-ec.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2105-soil-mois-tem-ec.mdx
@@ -1,27 +1,27 @@
 ---
 id: sensecap-s2105-soil-mois-tem-ec
 hide_title: true
-title: SenseCAP S2105-LoRaWAN Soil Moisture, Temperature and EC Sensor
+title: SenseCAP S2105-LoRaWAN® Soil Moisture, Temperature and EC Sensor
 description:
   SenseCAP S2105 Soil Temperature, Moisture, and EC Sensor satisfy industrial long-distance data
   acquisition with a wide range of 0 ~ 100% (m³/m³), -40 ~ 80℃, and 0 to 23 dS/m respectively. With
   Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for
-  minimal maintenance, it also supports three different LoRaWAN network architectures enabling you
+  minimal maintenance, it also supports three different LoRaWAN® network architectures enabling you
   to easily join it in existing gateways and network servers to build flexible and high-performance
   sensor network.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2105.jpeg
-sidebar_label: SenseCAP S2105-LoRaWAN Soil Moisture, Temperature and EC Sensor
+sidebar_label: SenseCAP S2105-LoRaWAN® Soil Moisture, Temperature and EC Sensor
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2105-soil-mois-tem-ec
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## SenseCAP S2105-LoRaWAN Soil Moisture, Temperature and EC Sensor
+## SenseCAP S2105-LoRaWAN® Soil Moisture, Temperature and EC Sensor
 
 SenseCAP S2105 Soil Temperature, Moisture, and EC Sensor satisfy industrial long-distance data
 acquisition with a wide range of 0 ~ 100% (m³/m³), -40 ~ 80℃, and 0 to 23 dS/m respectively. With
 Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for
-minimal maintenance, it also supports three different LoRaWAN network architectures enabling you to
+minimal maintenance, it also supports three different LoRaWAN® network architectures enabling you to
 easily join it in existing gateways and network servers to build flexible and high-performance
 sensor network.
 
@@ -37,7 +37,7 @@ sensor network.
 
 ### Specifications
 
-[S2105-LoRaWAN Soil Moisture, Temperature and EC Sensor](https://drive.google.com/file/d/1HfZMCDgKOhgWbJDyBI8cY4T2JVEOh9fF/view)
+[S2105-LoRaWAN® Soil Moisture, Temperature and EC Sensor](https://drive.google.com/file/d/1HfZMCDgKOhgWbJDyBI8cY4T2JVEOh9fF/view)
 
 #### Sensors:
 
