--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-soil-th.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-soil-th.mdx
@@ -1,19 +1,19 @@
 ---
 id: sensecap-soil-th
 hide_title: true
-title: SenseCAP Wireless Soil Moisture and Temperature Sensor - LoRaWAN
+title: SenseCAP Wireless Soil Moisture and Temperature Sensor - LoRaWAN®
 description:
   It measures soil volumetric water content (VWC) and temperature. It's designed with a 2-in-1
   sensor that integrates soil temperature and soil moisture, a custom battery and an IP66 enclosure,
   optimized for outdoor use cases that need reliable data collection over years.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-soil-th-deployment.jpg
-sidebar_label: SenseCAP Wireless Soil Moisture and Temperature Sensor - LoRaWAN
+sidebar_label: SenseCAP Wireless Soil Moisture and Temperature Sensor - LoRaWAN®
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-soil-th
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## SenseCAP Wireless Soil Moisture and Temperature Sensor - LoRaWAN
+## SenseCAP Wireless Soil Moisture and Temperature Sensor - LoRaWAN®
 
 It measures soil volumetric water content (VWC) and temperature. It's designed with a 2-in-1 sensor
 that integrates soil temperature and soil moisture, a custom battery and an IP66 enclosure,
