--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -28,7 +28,7 @@ distribution:
 | Reward Type           | Chain Variable          | Description                                                                                                        |
 | :-------------------- | :---------------------- | :----------------------------------------------------------------------------------------------------------------- |
 | PoC Challengees       | poc_challengees_percent | Awarded to any Hotspot that transmits a PoC packet after being targeted by the challenger.                         |
-| Witnesses             | poc_witnesses_percent   | Distributed to all Hotspots that witness a beacon packet as part of a PoC Challenge.                               |
+| Witnesses             | poc_witnesses_percent   | Distributed to selected Hotspots that witness a beacon packet as part of a PoC Challenge.                               |
 | Consensus Group       | consensus_percent       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks. |
 | Security              | securities_percent      | Awarded to Helium, Inc and other Network investors who hold Security Tokens.                                       |
 | Network Data Transfer | dc_percent              | Distributed each epoch to Hotspots that route LongFi sensor data for sensors on the Network during that epoch.     |
@@ -75,9 +75,9 @@ types:
 
 | Reward Type           | Percentage      | HNT Earned by Reward Type |
 | :-------------------- | :-------------- | :------------------------ |
-| PoC Challenger        | 0.85%           | 14.7569                   |
-| PoC Challengees       | 4.73% - 12.23%  | 82.1181 - 212.3264        |
-| Witnesses             | 18.92% - 48.92% | 328.4722 - 849.3056       |
+| PoC Challenger        | 0.85%           | 14.7236                   |
+| PoC Challengees       | 4.73% - 12.23%  | 82.1247 - 212.331        |
+| Witnesses             | 18.92% - 48.92% | 328.4989 - 849.3323       |
 | Consensus Group       | 6%              | 104.1667                  |
 | Security Tokens       | 32%             | 555.5556                  |
 | Network Data Transfer | _Up to 37.50%_  | _Up to 651.0417_          |
@@ -88,7 +88,7 @@ types:
 In the above table, you can see the maximum allotted rewards per reward type following HIP 10
 (described below). If you want to see the current reward type percentage, you can always query the
 [Chain Variables API](/api/blockchain/chain-variables). The next maximum allotted rewards change is
-currently scheduled for **August 1, 2023.**
+currently scheduled for **August 1, 2023** and will be updated along with changes related to the havening to maintain max HNT supply.
 
 ## HIP10 and Variable HNT Rewards for Network Data Transfer
 
