--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -25,13 +25,23 @@ Every epoch, the current consensus group mines approximately 30 blocks on the bl
 block, Hotspots perform various types of work and are awarded according to the following
 distribution:
 
-| Reward Type           | Chain Variable          | Description                                                                                                        |
-| :-------------------- | :---------------------- | :----------------------------------------------------------------------------------------------------------------- |
-| PoC Challengees       | poc_challengees_percent | Awarded to any Hotspot that transmits a PoC packet after being targeted by the challenger.                         |
-| Witnesses             | poc_witnesses_percent   | Distributed to selected Hotspots that witness a beacon packet as part of a PoC Challenge.                               |
-| Consensus Group       | consensus_percent       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks. |
-| Security              | securities_percent      | Awarded to Helium, Inc and other Network investors who hold Security Tokens.                                       |
-| Network Data Transfer | dc_percent              | Distributed each epoch to Hotspots that route LongFi sensor data for sensors on the Network during that epoch.     |
+| Reward Type           | Chain Variable          | Description                                                                                                                                  |
+| :-------------------- | :---------------------- | :------------------------------------------------------------------------------------------------------------------------------------------- |
+| PoC Challengees       | poc_challengees_percent | Awarded to any Hotspot that transmits a PoC packet after being targeted by the challenger.                                                   |
+| PoC Challenger        | poc_challengers_percent | Rewarded to any **Validator\*** that creates a valid PoC challenge and submits the corresponding receipt to the blockchain. (see note below) |
+| Witnesses             | poc_witnesses_percent   | Distributed to selected Hotspots that witness a beacon packet as part of a PoC Challenge.                                                    |
+| Consensus Group       | consensus_percent       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks.                           |
+| Security              | securities_percent      | Awarded to Helium, Inc and other Network investors who hold Security Tokens.                                                                 |
+| Network Data Transfer | dc_percent              | Distributed each epoch to Hotspots that route LongFi sensor data for sensors on the Network during that epoch.                               |
+
+:::note
+
+[HIP55](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md) moved the
+resposibiility of creating PoC Challenges to Validators, and as such PoC Rewards (chain_var
+`pos_challengers_percent`) are now awarded to any Validator that creates a valid PoC challenge and
+submits the corresponding receipt to the blockchain.
+
+:::
 
 **_Do I Have To Actively Participate to Earn Rewards Once My Hotspot is Deployed?_**
 
@@ -76,7 +86,7 @@ types:
 | Reward Type           | Percentage      | HNT Earned by Reward Type |
 | :-------------------- | :-------------- | :------------------------ |
 | PoC Challenger        | 0.85%           | 14.7236                   |
-| PoC Challengees       | 4.73% - 12.23%  | 82.1247 - 212.331        |
+| PoC Challengees       | 4.73% - 12.23%  | 82.1247 - 212.331         |
 | Witnesses             | 18.92% - 48.92% | 328.4989 - 849.3323       |
 | Consensus Group       | 6%              | 104.1667                  |
 | Security Tokens       | 32%             | 555.5556                  |
@@ -88,7 +98,8 @@ types:
 In the above table, you can see the maximum allotted rewards per reward type following HIP 10
 (described below). If you want to see the current reward type percentage, you can always query the
 [Chain Variables API](/api/blockchain/chain-variables). The next maximum allotted rewards change is
-currently scheduled for **August 1, 2023** and will be updated along with changes related to the havening to maintain max HNT supply.
+currently scheduled for **August 1, 2023** and will be updated along with changes related to the
+havening to maintain max HNT supply.
 
 ## HIP10 and Variable HNT Rewards for Network Data Transfer
 
@@ -140,6 +151,8 @@ calculation is:`(800,000,000 DC * $0.00001 / $8.00 HNT Oracle Price)`
 - `PoC Challenger`, `PoC Challengee`, and `Witness` reward types get distributed in the epoch that
   includes the corresponding PoC receipt.
 - A Hotspots can earn more than one `PoC Challengee` and `Witness` rewards per epoch.
+- `Challenger` rewards are distributed to Validators that create and collect Challenge data and
+  submit this information to the blockchain.
 
 ## HNT Proration and Slow Block Times
 
