--- a/docs/use-the-network/devices/development/seeed-studio/loramodule-e5-devkit.mdx
+++ b/docs/use-the-network/devices/development/seeed-studio/loramodule-e5-devkit.mdx
@@ -1,29 +1,24 @@
 ---
 id: loramodule-e5-devkit
 hide_title: true
-title: LoRa-E5 Development Kit - based on LoRa-E5 STM32WLE5JC
+title: Wio-E5 Dev Kit, for Long Range Application
 description:
-  LoRa-E5 Development Kit consists of a LoRa-E5 Dev Board, an antenna(EU868/US915), a USB type C
-  cable, and a 2*AA 3V Battery Holder. LoRa-E5 Dev Board embedded with LoRa-E5 STM32WLE5JC Module
-  that supports LoRaWAN protocol on global frequency band. It is user-friendly since it leads out
-  full GPIOs of LoRa-E5 supporting various data protocols and interfaces including RS-485, Grove,
-  male/female headers, etc. It would be a perfect choice for fast testing and rapid prototyping of
-  your LoRa IoT projects.
+  Wio-E5 Development Kit consists of a Wio-E5 Dev Board, an antenna(EU868/US915), a USB type C cable, and a 2*AA 3V Battery Holder. Wio-E5 Dev Board embedded with Wio-E5 STM32WLE5JC Module that supports LoRaWAN® protocol on global frequency band. It is user-friendly since it leads out full GPIOs of Wio-E5 supporting various data protocols and interfaces including RS-485, Grove, male/female headers, etc. It would be a perfect choice for fast testing and rapid prototyping of your Long Range IoT projects.
 image: img/use-the-network/devices/development/seeed-studio/loramodule-e5.jpg
-sidebar_label: LoRa-E5 Development Kit
+sidebar_label: Wio-E5 Development Kit
 slug: /use-the-network/devices/development/seeed-studio/loramodule-e5-devkit
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## LoRa-E5 Development Kit
+## Wio-E5 Development Kit
 
-LoRa-E5 Development Kit consists of a LoRa-E5 Dev Board, an antenna(EU868/US915), a USB type C
-cable, and a 2\*AA 3V Battery Holder. LoRa-E5 Dev Board embedded with LoRa-E5 STM32WLE5JC Module
-that supports LoRaWAN protocol on global frequency band. It is user-friendly since it leads out full
-GPIOs of LoRa-E5 supporting various data protocols and interfaces including RS-485, Grove,
+Wio-E5 Development Kit consists of a Wio-E5 Dev Board, an antenna(EU868/US915), a USB type C
+cable, and a 2\*AA 3V Battery Holder. Wio-E5 Dev Board embedded with Wio-E5 STM32WLE5JC Module
+that supports LoRaWAN® protocol on global frequency band. It is user-friendly since it leads out full
+GPIOs of Wio-E5 supporting various data protocols and interfaces including RS-485, Grove,
 male/female headers, etc. It would be a perfect choice for fast testing and rapid prototyping of
-your LoRa IoT projects.
+your LoRa® IoT projects.
 
 <img
   src={useBaseUrl('img/use-the-network/devices/development/seeed-studio/loramodule-e5-devkit.png')}
