--- a/docs/use-the-network/devices/development/seeed-studio/seeed-studio-lorawan-dev-kit.mdx
+++ b/docs/use-the-network/devices/development/seeed-studio/seeed-studio-lorawan-dev-kit.mdx
@@ -1,27 +1,23 @@
 ---
 id: seeed-studio-lorawan-dev-kit
 hide_title: true
-title: Seeed Studio LoRaWAN Dev Kit
+title: SenseCAP K1100 - The Sensor Prototype Kit with LoRa® and AI
 description:
-  The kit includes a Wio Terminal master controller with WIFI/BLE and display, as well as carefully
-  selected Grove - LoRa-E5, Grove - VOC and eCO2 Gas Sensor SGP30, Grove - Soil Moisture Sensor,
-  Grove - Temp&Humi Sensor (SHT40), and Grove - Vision AI Module. Humi Sensor (SHT40), and Grove -
-  Vision AI Module. This kit is a perfect combination of LoRa and Edge AI, which allows software
-  engineers to quickly deploy their first LoRaWAN projects through plug-and-play connectivity.
+  SenseCAP K1100 - The Sensor Prototype Kit with LoRa® and AI, it enables you to rapidly digitize the world using LoRaWAN® and solve real-world challenges. With this plug-and-play toolkit, anyone can add AI to their edge devices and unlock the potential of AIoT.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-lorawan-dev-kit.jpeg
-sidebar_label: Seeed Studio LoRaWAN Dev Kit
+sidebar_label: SenseCAP K1100 - The Sensor Prototype Kit with LoRa® and AI
 slug: /use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-lorawan-dev-kit
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## Seeed Studio LoRaWAN Dev Kit
+## SenseCAP K1100 - The Sensor Prototype Kit with LoRa® and AI
 
 The kit includes a Wio Terminal master controller with WIFI/BLE and display, as well as carefully
-selected Grove - LoRa-E5, Grove - VOC and eCO2 Gas Sensor SGP30, Grove - Soil Moisture Sensor,
+selected Grove - Wio-E5, Grove - VOC and eCO2 Gas Sensor SGP30, Grove - Soil Moisture Sensor,
 Grove - Temp&Humi Sensor (SHT40), and Grove - Vision AI Module. Humi Sensor (SHT40), and Grove -
-Vision AI Module. This kit is a perfect combination of LoRa and Edge AI, which allows software
-engineers to quickly deploy their first LoRaWAN projects through plug-and-play connectivity.
+Vision AI Module. This kit is a perfect combination of LoRa® and Edge AI, which allows software
+engineers to quickly deploy their first LoRaWAN® projects through plug-and-play connectivity.
 
 <img
   src={useBaseUrl(
