--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2102-light.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2102-light.mdx
@@ -1,27 +1,27 @@
 ---
 id: sensecap-s2102-light
 hide_title: true
-title: SenseCAP S2102 - LoRaWAN Light Intensity Sensor
+title: SenseCAP S2102 - LoRaWAN® Light Intensity Sensor
 description:
   SenseCAP S2102 light intensity sensors satisfy industrial long-distance data acquisition with a
   wide range of intensity of light in lux from 0 - 160000 lux respectively. With Bluetooth 5.0 for
   easy configuration and firmware upgrade and a built-in replaceable battery for minimal
-  maintenance, it also supports three different LoRaWAN network architectures enabling you to easily
+  maintenance, it also supports three different LoRaWAN® network architectures enabling you to easily
   join it in existing gateways and network servers to build flexible and high-performance sensor
   network.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2102.jpeg
-sidebar_label: SenseCAP S2102 - LoRaWAN Light Intensity Sensor
+sidebar_label: SenseCAP S2102 - LoRaWAN® Light Intensity Sensor
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2102-light
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## SenseCAP S2102 - LoRaWAN Light Intensity Sensor
+## SenseCAP S2102 - LoRaWAN® Light Intensity Sensor
 
 SenseCAP S2102 light intensity sensors satisfy industrial long-distance data acquisition with a wide
 range of intensity of light in lux from 0 - 160000 lux respectively. With Bluetooth 5.0 for easy
 configuration and firmware upgrade and a built-in replaceable battery for minimal maintenance, it
-also supports three different LoRaWAN network architectures enabling you to easily join it in
+also supports three different LoRaWAN® network architectures enabling you to easily join it in
 existing gateways and network servers to build flexible and high-performance sensor network.
 
 <img
@@ -36,7 +36,7 @@ existing gateways and network servers to build flexible and high-performance sen
 
 ### Specifications
 
-[S2102 - LoRaWAN Light Intensity Sensor Specs](https://drive.google.com/file/d/1HfZMCDgKOhgWbJDyBI8cY4T2JVEOh9fF/view)
+[S2102 - LoRaWAN® Light Intensity Sensor Specs](https://drive.google.com/file/d/1HfZMCDgKOhgWbJDyBI8cY4T2JVEOh9fF/view)
 
 #### Sensors:
 
