--- a/docs/use-the-network/run-a-network-server/debug-with-sniffer.mdx
+++ b/docs/use-the-network/run-a-network-server/debug-with-sniffer.mdx
@@ -24,6 +24,8 @@ sniffer.
    - [helium-wallet-rs](https://github.com/helium/helium-wallet-rs)
 
 Those packages require [Rust](https://rust-lang.org/) when building from source.
+You will also need to install [Cmake](https://cgold.readthedocs.io/en/latest/first-step/installation.html).
+If some of the following commands fail, try using sudo.
 
 Everything may run locally on a laptop/workstation, or use just the Rust-based tools locally for
 connecting to a remote Router & Console.
@@ -208,11 +210,11 @@ app_eui = "AppEUIHexValue..."
 app_key = "AppKeyLongHexValue..."
 
 [packet_forwarder.default]
-host = "localhost:1600"
+host = "localhost:1680"
 ```
 
 While editing that TOML file, also indicate that it should talk to your instance of `gateway-rs` as
-the packet-forwarder (typically on IP Port `1600`).
+the packet-forwarder (typically on IP Port `1680`).
 
 Keep the `defaults.toml` file unmodified for ease of `git pull` in future.
 
