--- a/docs/use-the-network/devices/development/development.mdx
+++ b/docs/use-the-network/devices/development/development.mdx
@@ -162,14 +162,16 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
-      <a href="/use-the-network/devices/development/opensource/">
+      <a href="/use-the-network/devices/development/opensourceinitiative/paxcounter">
         <img
           className="manufacturericon"
-          src={useBaseUrl('img/use-the-network/devices/development/opensource/osi_standard_logo_0.png')}
+          src={useBaseUrl(
+            'img/use-the-network/devices/development/opensourceinitiative/osi_standard_logo.png',
+          )}
         />
       </a>
       <p></p>
-      <a href="/use-the-network/devices/development/opensource/">
+      <a href="/use-the-network/devices/development/opensourceinitiative/paxcounter">
         {' '}
         View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
