Add Paxcounter device to Helium (#959)
* Create paxcounter.mdx

* Update paxcounter.mdx

* Update paxcounter.mdx

* Update paxcounter.mdx

* Update development.mdx

* Add files via upload

* formatting

applied line wrap
fixed up a few links to be shorter
moved image file to `static/img` directory
updated sidebars to include entry

Co-authored-by: Sam Gutentag <developer@samgutentag.com>

--- a/docs/use-the-network/devices/development/development.mdx
+++ b/docs/use-the-network/devices/development/development.mdx
@@ -162,6 +162,21 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
+      <a href="/use-the-network/devices/development/opensourceinitiative/paxcounter">
+        <img
+          className="manufacturericon"
+          src={useBaseUrl(
+            'img/use-the-network/devices/development/opensourceinitiative/osi_standard_logo.png',
+          )}
+        />
+      </a>
+      <p></p>
+      <a href="/use-the-network/devices/development/opensourceinitiative/paxcounter">
+        {' '}
+        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+      </a>
+    </div>
+    <div class="col col--4" style={{ marginBottom: 100 }}>
       <a href="/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1">
         <img
           className="manufacturericon"
