added page on 24-words wallets navigation fixups

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -9,12 +9,16 @@ slug: /wallets/app-wallet
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-:::important Sunset
+:::important Sunsetting Features
 
 Wallet-related functionality in the Helium Hotspot app will be sunsetted over the coming months.
 This functionality is moving to the new [Helium Wallet App](/wallets/helium-wallet-app)
 
 :::
+
+The Helium Hotspot App focuses on people who want to send or receive HNT or manage hotspots. Other
+activities, such as managing end-devices and OUIs (i.e. users of the network) are generally best
+suited for the command line wallet.
 
 The Helium app (available for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
 [Android](https://play.google.com/store/apps/details?id=com.helium.wallet)) includes everything you
@@ -26,13 +30,13 @@ Helium wallet, you're able to do things like:
 - Configure your Wi-Fi
 - View your Hotspot's activity
 - See where other Hotspots are located
-- Run Discovery Mode
 
 [Check out the latest app release notes](https://engineering.helium.com/)
 
 ## Guides
 
-- [Twelve Words Seed Phrase](/wallets/app-wallet/twelve-words)
+- [Twelve Words Seed Phrase](/wallets/twelve-words)
+- [Twenty Four Words Seed Phrase](/wallets/twenty-four-words)
 - [Transfer Hotspot](/wallets/app-wallet/transfer-hotspot)
 - [Understanding Hexagons](/wallets/app-wallet/hexagons)
 - [Transaction Failures](/wallets/app-wallet/transaction-failures)
