formatting and term consistency across docs

--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -39,7 +39,7 @@ Typescript.
 
 The [Maker Starter App](https://github.com/helium/maker-starter-app) includes support for
 deeplinking to the Helium Wallet App to sign transactions, removing any requirements for users to
-enter their 12 word seed phrase into the Maker App. **This is a security precaution and prevents
+enter their 12-words seed phrase into the Maker App. **This is a security precaution and prevents
 potential lost of funds and Hotspots, as the seed phrase acts as a user's private key on the
 blockchain.** If you find a Maker app that asks for your seed phrase, do not trust it.
 
